Cleaned up code, updated Project structure, gitignore and much more