@@ -6,7 +6,6 @@ import org.bukkit.ChatColor;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 
@@ -18,7 +17,7 @@ public class RPGCommandBase extends PKCommand {
 
 	@Override
 	public void execute(CommandSender sender, List<String> args) {
-		if (args.size() == 0) {
+		if (args.isEmpty()) {
 			sender.sendMessage(ChatColor.RED + "/bending rpg avatar <Player> " + ChatColor.YELLOW + "Create an Avatar.");
 			sender.sendMessage(ChatColor.RED + "/bending rpg help <Command/Event> " + ChatColor.YELLOW + "Display help.");
 			sender.sendMessage(ChatColor.RED + "/bending rpg worldevent <Argument> [Event] " + ChatColor.YELLOW + "Manipulate events.");
@@ -43,20 +42,20 @@ public class RPGCommandBase extends PKCommand {
 			for (RPGCommand cmd : RPGCommand.instances.values()) {
 				l.add(cmd.getName());
 			}
-			Collections.sort(l, Comparator.nullsLast(Comparator.naturalOrder()));
+			l.sort(Comparator.nullsLast(Comparator.naturalOrder()));
 			return l;
-		}
-		else
-		for (RPGCommand cmd : RPGCommand.instances.values()) {
-			if (Arrays.asList(cmd.getAliases()).contains(args.get(0).toLowerCase()) && sender.hasPermission("bending.command.rpg." + cmd.getName())) {
-				List<String> newargs = new ArrayList<String>();
-				for (int i = 1; i < args.size(); i++) {
-					if (!(args.get(i).equals("") || args.get(i).equals(" ")) && args.size() >= 1)
-					newargs.add(args.get(i));
+		} else {
+			for (RPGCommand cmd : RPGCommand.instances.values()) {
+				if (Arrays.asList(cmd.getAliases()).contains(args.getFirst().toLowerCase()) && sender.hasPermission("bending.command.rpg." + cmd.getName())) {
+					List<String> newargs = new ArrayList<>();
+					for (int i = 1; i < args.size(); i++) {
+						if (!(args.get(i).isEmpty() || args.get(i).equals(" ")))
+							newargs.add(args.get(i));
+					}
+					return cmd.getTabCompletion(sender, newargs);
 				}
-				return cmd.getTabCompletion(sender, newargs);
 			}
+			return new ArrayList<>();
 		}
-		return new ArrayList<String>();
 	}
 }
